<resources>
    <string name="app_name">AraySmarthome</string>
    <string name="preference_file_key">0</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_floors">Floors</string>
    <string name="title_activity_floorlist">Floorlist</string>
    <string name="title_activity_otagh">Otagh</string>
    <string name="hello_world">Hello world!</string>
    <string name="adress">ادرس:تبریز زعفرانیه میدان شهریار پشت بانک صادرات کوچه شکوفه3 پلاک8</string>
    <string name="number">تلفن :041 -33823668</string>
    <string name="vahed1">واحد 1</string>
    <string name="vahed2">واحد 2</string>
    <string name="vahed3">واحد 3</string>
    <string name="vahed4">واحد 4</string>
    <string name="updatemadules">به روز رسانی ماژول ها</string>
    <string name="settings">تنظیمات</string>
    <string name="aboutus">درباره ما</string>
    <string name="contactus">ارتباط با ما</string>
    <string name="senarios">سناریو ها</string>
    <string name="persian">فارسی</string>
    <string name="english">english</string>
    <string name="floor2">طبقه 2</string>
    <string name="floor3">طبقه 3</string>
    <string name="floor4">طبقه 4</string>
    <string name="reacive">دریافت ورودی</string>
    <string name="kelid1">کلید1</string>
    <string name="kelid2">کلید2</string>
    <string name="kelid3">کلید3</string>
    <string name="color_dialog_title">Choose color</string>
</resources>
