<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/senarios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/senarios" />
        <item
            android:id="@+id/update"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/updatemadules" />
        <item
            android:id="@+id/c"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

    </group>

    <item android:title="@string/aboutus">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contactus" />

        </menu>
    </item>

</menu>
