<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mohammad.araysmarthome.Main3Activity"
    tools:showIn="@layout/app_bar_main3"
    android:background="#ffecb3">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:background="#ffecb3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <Button
            android:id="@+id/b1"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:background="#dce775"
            android:orientation="vertical"
            android:text="@string/reacive" />

        <Button
            android:id="@+id/b2"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/floor2"
            android:layout_marginLeft="50dp"
            android:background="#dce775"
            android:layout_marginTop="50dp"
            />

        <Button
            android:id="@+id/b3"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/floor3"
            android:background="#dce775"
             />

        <Button
            android:id="@+id/b4"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/floor4"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:background="#dce775"
          />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>